--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>LJ08</groupId>
+    <groupId>zhang</groupId>
     <artifactId>encrypt</artifactId>
     <version>1.0.5-RELEASE</version>
     <name>spring-boot-encrypt-starter</name>
